fix(style): top users bar name too long

--- a/src/global.less
+++ b/src/global.less
@@ -765,6 +765,9 @@ body {
   .tooltip-x-name {
     font-size: var(--font-size-small);
     color: var(--ant-color-text-tertiary);
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   .tooltip-item {
